--- a/frontend/amp.html
+++ b/frontend/amp.html
@@ -34,7 +34,7 @@
 						<table class="table table-striped">
 							<tbody>
 
-						<tr><td><div class="amp_features"><input id="amp_model" cols="65" placeholder="Model" /></div></td></tr>
+						<tr><td><div class="amp_features"><input id="amp_model"  placeholder="Model" /></div></td></tr>
 						<tr><td><div class="amp_features"><input id="amp_manufacturer" placeholder="Brand"/></div></h3></td></tr>
 						<tr><td><div class="amp_features"><input id="amp_style" placeholder="Style (e.g. rock, metal, blues, country...)" /></div></td></tr>
 						<tr><td><div class="amp_features"><input id="wattage" placeholder="Wattage" /></div></td></tr>
