comments videofrom html

--- a/frontend/amp_detail.html
+++ b/frontend/amp_detail.html
@@ -63,9 +63,9 @@
 
 						<tr><td><h4 class="amp_model"></h4></td></tr>
 						<tr><td><h4 class="amp_manufacturer"></h4></td></tr>
-						<tr><td><h5 class="amp_style"></h5></td></tr>
-						<tr><td><h6 class="wattage"></h6></td></tr>
-						<tr><td><h4 class="video"></h4></td></tr>
+						<tr><td><h4 class="amp_style"></h4></td></tr>
+						<tr><td><h4 class="wattage"></h4></td></tr>
+						<!-- <tr><td><h4 class="video"></h4></td></tr> -->
 						<tr><td><h4 class="foot_switchable"></h4></td></tr>
 						<tr><td><h4 class="number_of_channels"></h4></td></tr>
 						<tr><td><h4 class="midi_capable"></h4></td></tr>
