--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
 						<h4 class="amp_style">Style:</h4>
 						<h4 class="wattage">Wattage:</h4>
 						<h4 class="image"></h4>
-						<div class="features">Features:</div>
+						<!-- <div class="features">Features:</div> -->
 
 		 			</div>
 					<!-- <div class="run"></div> -->
