--- a/frontend/amp.html
+++ b/frontend/amp.html
@@ -41,15 +41,39 @@
 						<tr><td><div class="amp_features"><textarea id="features" rows="4" cols="65" placeholder="Features"></textarea></div></td></tr>
 						<tr><td><div class="amp_features"><input id="image" placeholder="Image" /></div></td></tr>
 						<tr><td><div class="amp_features"><input id="video" placeholder="Video Link" /></div></td></tr>
-						<tr><td><div class="amp_features">Foot Switchable? <input id="foot_switchable" type="radio" name="foot_switchable" value="true"> True <input id="foot_switchable" type="radio" name="foot_switchable" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">Foot Switchable?
+							<select id="foot_switchable">
+								<option value=""> - choose whether foot switchable - </option>
+								<option value="true">is footswitchable</option>
+								<option value="false">is not footswitchable</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features"><input id="number_of_channels" placeholder="Number of Channels" /></div></td></tr>
-						<tr><td><div class="amp_features">Midi Capable? <input id="midi_capable" type="radio" name="midi_capable" value="true"> True <input id="midi_capable" type="radio" name="midi_capable" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has a Clean Channel? <input id="has_clean" type="radio" name="has_clean" value="true"> True <input id="has_clean" type="radio" name="has_clean" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">MIDI Capable?
+							<select id="midi_capable">
+								<option value=""> - choose whether MIDI capable - </option>
+							   	<option value="true">MIDI capable</option>
+							   	<option value="false">not MIDI capable</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has a Clean Channel?
+							<select id="has_clean">
+								<option value=""> - choose whether has clean channel - </option>
+								<option value="true">has clean channel</option>
+								<option value="false">no clean channel</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features"><input id="sounds_like_players" placeholder="Players who would use this" /></div></td></tr>
-						<tr><td><div class="amp_features">Percussive? <input id="percussive" type="radio" name="percussive" value="true"> True <input id="percussive" type="radio" name="percussive" value="false"> False</div></td></tr>
+						<tr><td><div class="amp_features">Percussive?
+							<select id="percussive">
+								<option value=""> - choose whether percussive - </option>
+							   	<option value="true">percussive</option>
+							   	<option value="false">not percussive</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features">How Percussive?<br>
 							<select id="percussive_level_amount">
-								<option value=""> - choose percussion level - </option>
+								<option value=""> - choose percussion amount - </option>
 								<option value="1">1 - not percussive</option>
 								<option value="2">2</option>
 								<option value="3">3</option>
@@ -98,7 +122,13 @@
 						</div></td></tr>
 
 						<tr><td><div class="amp_features"><input id="dynamic_feel_punch_vs_compression" placeholder="Dynamic Feel - punch vs compression description" /></div></td></tr>
-						<tr><td><div class="amp_features">Easy to Play? <input id="easy_to_play" type="radio" name="easy_to_play" value="true"> True <input id="easy_to_play" type="radio" name="easy_to_play" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">Easy to Play?
+							<select id="easy_to_play">
+								<option value=""> - choose whether easy to play - </option>
+							   	<option value="true">easy to play</option>
+							   	<option value="false">not not easy to play</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features">How easty to play?<br>
 							<select id="easy_to_play_amount">
 								<option value=""> - choose ease of play level - </option>
@@ -114,8 +144,13 @@
 								<option value="10">10 - easy to play</option>
 							</select>
 						</div></td></tr>
-
-						<tr><td><div class="amp_features">Sounds good at low volume? <input id="sound_good_low_volume" type="radio" name="sound_good_low_volume" value="true"> True <input id="sound_good_low_volume" type="radio" name="sound_good_low_volume" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">Sounds good at low volume?
+							<select id="sound_good_low_volume">
+								<option value=""> - choose whether good at low volume - </option>
+							   	<option value="true">YES - good at low volume</option>
+							   	<option value="false">NO - not good at low volume</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features"><input id="preferred_speaker_combination" placeholder="Preferred spakers?" /></div></td></tr>
 						<tr><td><div class="amp_features"><input id="best_music_genre_served" placeholder="Genre served?" /></div></td></tr>
 						<tr><td><div class="amp_features"><input id="price_point_new" placeholder="Price NEW" /></div></td></tr>
@@ -135,7 +170,13 @@
 									<option value="10">10 - very popular</option>
 								</select>
 						</div></td></tr>
-						<tr><td><div class="amp_features">Boutique Amp? <input id="boutique" type="radio" name="boutique" value="true"> True <input id="boutique" type="radio" name="boutique" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">Boutique Amp?
+							<select id="boutique">
+								<option value=""> - choose whether boutique - </option>
+							   	<option value="true">YES - is boutique</option>
+							   	<option value="false">No - is not boutique</option>
+						   </select>
+						</div></td></tr>
 						<tr><td><div class="amp_features">How rare is this amp?<br>
 								<select id="rarity">
 									<option value=""> - choose rarity level - </option>
@@ -152,10 +193,34 @@
 								</select>
 						</div></td></tr>
 						<tr><td><div class="amp_features"><input id="year_introduced" placeholder="Year Introduced" /></div></td></tr>
-						<tr><td><div class="amp_features">D.I. Capable?<input id="di_capable" type="radio" name="di_capable" value="true"> True <input id="di_capable" type="radio" name="di_capable" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has power scaling? <input id="power_scaling" type="radio" name="power_scaling" value="true"> True <input id="power_scaling" type="radio" name="power_scaling" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has variac capability? <input id="has_variac" type="radio" name="has_variac" value="true"> True <input id="has_variac" type="radio" name="has_variac" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has switchable wattage? <input id="has_switchable_wattage" type="radio" name="has_switchable_wattage" value="true"> True <input id="has_switchable_wattage" type="radio" name="has_switchable_wattage" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">D.I. Capable?
+							<select id="di_capable">
+								<option value=""> - choose whether has D.I. - </option>
+							   	<option value="true">YES - has D.I.</option>
+							   	<option value="false">NO - no D.I.</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has power scaling?
+							<select id="power_scaling">
+								<option value=""> - choose whether has power scaling - </option>
+							   	<option value="true">YES - has power scaling</option>
+							   	<option value="false">NO - no power scaling</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has variac capability?
+							<select id="has_variac">
+								<option value=""> - choose whether has vaiac - </option>
+								<option value="true">YES - has variac</option>
+								<option value="false">NO - no variac</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has switchable wattage?
+							<select id="has_switchable_wattage">
+								<option value=""> - choose whether switchable wattage - </option>
+							   	<option value="true">YES - switchable wattage</option>
+							   	<option value="false">NO - no switchable wattage</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features">
 							<select id="gain_rating">Gain rating:<br>
 								<option value=""> - choose gain rating - </option>
@@ -186,7 +251,13 @@
 								<option value="10">10 - Mesa Boogie Mark Series</option>
 							</select>
 						</div></td></tr>
-						<tr><td><div class="amp_features">House friendly? <input id="house_friendly" type="radio" name="house_friendly" value="true"> True <input id="house_friendly" type="radio" name="house_friendly" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">House friendly?
+							<select id="house_friendly">
+								<option value=""> - choose whether house friendly - </option>
+							   	<option value="true">YES - house friendly</option>
+							   	<option value="false">NO - not house friendly</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features">Overall value for price point?<br>
 							<select id="overall_value_for_price_point">
 								<option value=""> - choose value level for price point - </option>
@@ -247,10 +318,34 @@
 								<option value="10">10 - super sparkle</option>
 							</select>
 						</div></td></tr>
-						<tr><td><div class="amp_features">Has Serial Effects Loop? <input id="fx_loop_serial" type="radio" name="fx_loop_serial" value="true"> True <input id="fx_loop_serial" type="radio" name="fx_loop_serial" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has Parallel Effects Loop? <input id="fx_loop_parallel" type="radio" name="fx_loop_parallel" value="true"> True <input id="fx_loop_parallel" type="radio" name="fx_loop_parallel" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has Line Out? <input id="has_line_out" type="radio" name="has_line_out" value="true"> True <input id="has_line_out" type="radio" name="has_line_out" value="false"> False </div></td></tr>
-						<tr><td><div class="amp_features">Has Resonance or Depth Controls? <input id="has_resonance_or_depth" type="radio" name="has_resonance_or_depth" value="true"> True <input id="has_resonance_or_depth" type="radio" name="has_resonance_or_depth" value="false"> False </div></td></tr>
+						<tr><td><div class="amp_features">Has Serial Effects Loop?
+							<select id="fx_loop_serial">
+								<option value=""> - choose whether serial effects loop - </option>
+								<option value="true">YES - has serial effects loop</option>
+								<option value="false">NO - no serial effects loop</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has Parallel Effects Loop?
+							<select id="fx_loop_parallel">
+								<option value=""> - choose whether parallel effects loop - </option>
+							   	<option value="true">YES - has parallel effects loop</option>
+							   	<option value="false">No - no parallel effects loop</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has Line Out?
+							<select id="has_line_out">
+								<option value=""> - choose whether has line out - </option>
+							   	<option value="true">YES - has line out</option>
+							   	<option value="false">NO - no line out</option>
+							</select>
+						</div></td></tr>
+						<tr><td><div class="amp_features">Has Resonance or Depth Controls?
+							<select id="has_resonance_or_depth">
+								<option value=""> - choose whether has resonance or depth - </option>
+							   	<option value="true">YES - has resonance or depth</option>
+							   	<option value="false">NO - no resonance or depth</option>
+							</select>
+						</div></td></tr>
 						<tr><td><div class="amp_features"><input id="eq_voicing" placeholder="EQ Voicing description" /></div></td></tr>
 						<tr><td><div class="amp_features">Tone stack:<br>
 							<select id="tone_stack">
